# ail-homework

./: .gitignore  README.md  pyproject.toml
docs/: literature.md  pitfalls.md  usage.md
src/video_analyst/: ingestion.py  main.py  rag.py  segmentation.py
tests/: test_ingestion.py  test_rag.py  test_segmentation.py
